feat: print with tables
