# pkg/api/openapi.yaml
@@ -75,20 +75,7 @@ paths:
       responses:
         '200':
           description: A list of projects.
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: string
-                    display:
-                      type: string
-                  required:
-                    - id
-                    - display
+          content: { application/json: { schema: { $ref: '#/components/schemas/Projects' } } }
         '400': { $ref: '#/components/responses/BadRequest' }
         '401': { $ref: '#/components/responses/Unauthorized' }
         '403': { $ref: '#/components/responses/Forbidden' }
@@ -488,6 +475,20 @@ components:
         - created_at
         - display
         - environment_id
+    Projects:
+      type: array
+      items: { $ref: "#/components/schemas/Project" }
+    Project:
+      type: object
+      required: [ id, display ]
+      properties:
+        id:
+          type: string
+          format: uuid
+        display:
+          type: string
+          pattern: ^[[:alnum:] _]+$
+          minLength: 1
     Variables:
       type: array
       items:
